# hypno-ai

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  app.py  docker-compose.yml  hypno-ai.spec  main.py  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.py  run.sh  setup.bat  setup.sh  setup_instructions.md  test_db.py  test_voices.py  update.bat  update.sh
.github/workflows/: desktop-app-build.yml  docker-build-deploy.yml  run-tests.yml
app/: __init__.py  config.py
app/audio/: __init__.py  audio.py  audio_original.py
app/data/: README.md  routines.json
app/desktop/: __init__.py  generation_dialog.py  main_window.py  model_download_dialog.py  qt_task_manager.py  routine_editor.py  routines_list.py  settings_dialog.py  task_manager.py
app/models/: database.py  migrations.py  routine.py  settings.py
app/routes/: __init__.py  routes.py
app/static/css/: style.css
app/static/js/: index.js  routine.js  script.js
app/static/tasks/: 48b3437a-5c0e-4af7-aa78-2ffbe5dc665c.json
app/static/voices/: README.txt
app/tasks/: base_task_manager.py  file_task_manager.py  tasks.py
app/templates/: index.html  routine.html
app/tts_model/: model.py
app/utils/: __init__.py  utils.py
migrations/: README.md  env.py
migrations/versions/: add_description_column.py  initial_schema.py
static/css/: style.css
static/js/: script.js
templates/: index.html
test/: conftest.py  test_audio.py  test_audio_generation.py  test_db.py  test_heading_ignored.py  test_migrations.py  test_task_manager.py  test_tts_model.py  test_utils.py  test_voices.py
