[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypno-ai"
version = "0.1.0"
description = "A text-to-speech web application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "Flask==3.1.1",
    "Werkzeug==3.1.3",
    "pydub==0.25.1",
    "coqui-tts==0.26.2",
    "gunicorn==21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"