[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypno-ai"
version = "0.1.0"
description = "A text-to-speech desktop application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydub==0.25.1",
    "coqui-tts==0.26.2",
    "torch==2.7.1",
    "PyQt6==6.7.1",
    "PyQt6-Qt6==6.7.1",
    "PyQt6-sip==13.10.2",
    "pyinstaller==6.14.2",
    "alembic==1.16.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
